[package]
name = "httpd2"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable logging to journald.
journald = ["slog-journald"]
# Use the system allocator (intended for heap profiling only).
system_allocator = []

[dependencies]
hyper = { version = "0.14.12", features = ["server", "http1", "http2", "stream", "runtime"] }
tokio = { version = "1.11.0", features = ["full"] }
futures = "0.3.17"
rustls = "0.19.1"
tokio-rustls = "0.22.0"
nix = "0.22.1"
clap = "2.33.3"
libc = "0.2.101"
tokio-util = { version = "0.6.8", features = ["codec"] }
bytes = "1.1.0"
httpdate = "1.0.1"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.8.0"
slog-journald = { version = "2.1.1", optional = true }
structopt = "0.3.23"
num_cpus = "1.13.0"

[profile.release]
debug = 2
