[package]
name = "httpd2"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2021"
default-run = "httpd2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable logging to journald.
journald = ["slog-journald"]
# Use the system allocator (intended for heap profiling only).
system_allocator = []

[dependencies]
hyper = { version = "1.1", features = ["server", "http1", "http2"] }
tokio = { version = "1.35.0", features = ["full"] }
futures = "0.3.30"
rustls = "0.22.2"
tokio-rustls = "0.25.0"
nix = { version = "0.27.1", features = ["user", "fs"] }
libc = "0.2.152"
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
httpdate = "1.0.3"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.8.0"
slog-journald = { version = "2.1.1", optional = true }
num_cpus = "1.13.0"
clap = { version = "4.4.15", features = ["derive", "wrap_help"] }
http-body-util = "0.1.0"
rustls-pemfile = "2.0.0"
hyper-util = { version = "0.1.2", features = ["server", "server-auto", "tokio"] }
enum-map = "2.7.3"
thiserror = "1.0.56"

[profile.release]
debug = 2
